--- a/app/src/main/res/layout/detail_activity.xml
+++ b/app/src/main/res/layout/detail_activity.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <cn.refactor.multistatelayout.MultiStateLayout
@@ -48,13 +50,14 @@
 
                 </RelativeLayout>
 
-                <TextView
+                <WebView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/text"
                     android:layout_below="@+id/imageContent"
                     android:textColor="#000"
-                    android:layout_margin="16dp"/>
+                    android:layout_margin="16dp"
+                    tools:ignore="WebViewLayout" />
 
             </RelativeLayout>
 
